<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuanpc.sdsupracticequestions.SignUpActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:text="@string/sdsu_practice_questions"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"/>

    <LinearLayout
        android:layout_width="@dimen/medium_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_text_view"
        >
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password_edit_text"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/name_edit_text"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:nextFocusDown="@+id/redid_edit_text"/>
        <EditText
            android:id="@+id/redid_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/redid"
            android:inputType="number"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"/>

    </LinearLayout>

</RelativeLayout>
