<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuanpc.sdsupracticequestions.AddQuestionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/department_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/red"/>
        <TextView
            android:id="@+id/course_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/blue"/>
        <EditText
            android:id="@+id/question_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_title_or_chapter"
            android:nextFocusDown="@+id/question_text_edit_text"
            />
        <EditText
            android:id="@+id/question_text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/question_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </Spinner>
            <Button
                android:id="@+id/add_choice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_choice"
                android:layout_weight="1"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/clear_choices_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_choice"
                android:layout_weight="1"
                android:visibility="invisible"/>
        </LinearLayout>
        <EditText
            android:id="@+id/correct_answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correct_answer"
            />
        <LinearLayout
            android:id="@+id/multiple_choices_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        </LinearLayout>
        <EditText
            android:id="@+id/explanation_edit_text"
            android:hint="@string/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
