<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.thuanpc.sdsupracticequestions.PracticeActivity"
    android:layout_margin="3dp">
        <TextView
            android:id="@+id/question_title_text_view"
            android:text="@string/question_title_or_chapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:gravity="center"/>

        <TextView
            android:id="@+id/question_text_text_view"
            android:text="@string/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/question_multiple_choice_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <EditText
            android:id="@+id/question_answer_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer"/>
        <Button
            android:id="@+id/done_button"
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
</LinearLayout>
