<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.thuanpc.sdsupracticequestions.SearchOrAddActivity"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/select_department"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/department"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
            <Spinner
                android:id="@+id/department_spinner"
                android:layout_weight="2"
                />
            <Button
                android:id="@+id/reload_department_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload"/>
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/select_course"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/course"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
            <Spinner
                android:id="@+id/course_spinner"
                android:layout_weight="2"
                />
            <Button
                android:id="@+id/reload_course_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reload"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/show_questions_button"
        android:text="@string/show_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
