<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuanpc.sdsupracticequestions.DiscussionActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/question_title_text_view"
        android:text="@string/question_title_or_chapter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/question_text_text_view"
        android:layout_below="@id/question_title_text_view"
        android:text="@string/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/message_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/question_text_text_view"
        android:layout_above="@+id/message_linear_layout">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/message_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/message_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>
        <Button
            android:id="@+id/send_button"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
